--- a/module2-solution/styles.css
+++ b/module2-solution/styles.css
@@ -108,21 +108,22 @@ h1{
         }
 
         #col1{
-            width: 100%;
+            /* width: 100%; */
             height: 150px;
             float: right;
         }
     
         #col2{
-            width: 100%;
+            /* width: 100%; */
             height: 150px;
             float: right;
         }
     
         #col3{
-            width: 100%;
+            /* width: 100%; */
             height: 150px;
             float: right;
         }
         
         }
+
